--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/restaurant.scss:./public/css/restaurant.css"
+    "sass": "sass --watch ./sass/restaurant.scss:./public/css/restaurant.css",
+    "prefix": "postcss ./public/css/restaurant.css --use autoprefixer -d ./public/css/prefixed/"
   },
   "repository": {
     "type": "git",
@@ -12,6 +13,7 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": "last 4 versions",
   "bugs": {
     "url": "https://github.com/TiagoCarvalhoMartins/TiagoCARVALHOMARTINS_3_10092021/issues"
   },
