--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/restaurant.scss:./public/css/restaurant.css",
-    "prefix": "postcss ./public/css/restaurant.css --use autoprefixer -d ./public/css/prefixed/"
+    "sass": "sass --watch ./sass/index.scss:./public/css/index.css",
+    "prefix": "postcss ./public/css/index.css --use autoprefixer -d ./public/css/prefixed/"
   },
   "repository": {
     "type": "git",
