--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/index.scss:./public/css/index.css",
+    "sassindex": "sass --watch ./sass/index.scss:./public/css/index.css",
+    "sassrestau": "sass --watch ./sass/restaurant.scss:./public/css/restaurant.css",
     "prefix": "postcss ./public/css/index.css --use autoprefixer -d ./public/css/prefixed/"
   },
   "repository": {
